--- a/index.css
+++ b/index.css
@@ -4,12 +4,35 @@ html, body {
 }
 
 .grid {
-    width: 420px; /* 28x15 pacman default*/
+    display: flex;
+    flex-wrap: wrap;
+    width: 420px;
     height: 420px;
     border: solid black;
 }
 
 .grid div {
     width: 15px;
-    height: 15px;
+    height: 15px;   
+}
+
+.pac-dot {
+    background-color: green;
+    border: 5px solid white;
+    box-sizing: border-box;
+}
+
+.wall {
+    background-color: blue;
+}
+
+.power-pellet {
+    background-color: green;
+    border-radius: 7.5px;
+}
+
+.pacman {
+    background-color: orange;
+    border-radius: 7.5px;
+    border: none;
 }
