--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ html, body {
     height: 15px;   
 }
 
+/* OBJECTS */
 .pac-dot {
     background-color: green;
     border: 5px solid white;
@@ -31,8 +32,30 @@ html, body {
     border-radius: 7.5px;
 }
 
+/* Main character */
 .pacman {
     background-color: orange;
     border-radius: 7.5px;
+    border: none;
+}
+
+/* GHOSTS */
+.blinky {
+    background-color: red;
+    border: none;
+}
+
+.pinky {
+    background-color: pink;
+    border: none;
+}
+
+.inky {
+    background-color:aqua;
+    border: none;
+}
+
+.clyde {
+    background-color: orange;
     border: none;
 }
